--- a/Translation/item.json
+++ b/Translation/item.json
@@ -4162,7 +4162,7 @@
     },
     "item.3044.name":{
         "en":"[Spirit Egg] Balrog Warrior",
-        "fr":"[Oeuf d'esprit] Guerrier de Balrog",
+        "fr":"[Oeuf d'esprit] Guerrier du Balrog",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -5492,7 +5492,7 @@
     },
     "item.4044.name":{
         "en":"Balrog Warrior",
-        "fr":"Guerrier de Balrog",
+        "fr":"Guerrier du Balrog",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
