--- a/Translation/item.json
+++ b/Translation/item.json
@@ -11672,7 +11672,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Trang Bị Địa Chất",
+        "vi":"Răng Cưa Địa Chất",
         "ar":"",
         "it":"",
         "pl":"",
