--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2196,7 +2196,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hồi Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2272,7 +2272,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hồi sinh bằng vàng sẽ tiêu tốn {0} Vàng.",
         "ar":"",
         "it":"",
         "pl":"",
