--- a/Translation/item.json
+++ b/Translation/item.json
@@ -4039,7 +4039,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Hỏa Viêm Giám Hộ Tinh Anh",
+        "vi":"[Linh Trứng] Viêm Ma Giám Hộ Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4153,7 +4153,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Hỏa Viêm Nô Bộc",
+        "vi":"[Linh Trứng] Viêm Ma Nô Bộc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5369,7 +5369,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hỏa Viêm Giám Hộ Tinh Anh",
+        "vi":"Viêm Ma Giám Hộ Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5483,7 +5483,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hỏa Viêm Nô Bộc",
+        "vi":"Viêm Ma Nô Bộc",
         "ar":"",
         "it":"",
         "pl":"",
