--- a/Translation/map.json
+++ b/Translation/map.json
@@ -961,7 +961,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tháp Hỏa Viêm",
+        "vi":"Viêm Ma Tháp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -980,7 +980,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cổng Tháp Hỏa Viêm",
+        "vi":"Cổng Viêm Ma Tháp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -999,7 +999,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tháp Hỏa Viêm - Điện Tinh Anh",
+        "vi":"Viêm Ma Tháp - Điện Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1018,7 +1018,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tháp Hỏa Viêm - Điện Tinh Anh Sâu",
+        "vi":"Viêm Ma Tháp - Điện Tinh Anh Sâu",
         "ar":"",
         "it":"",
         "pl":"",
