--- a/Translation/item.json
+++ b/Translation/item.json
@@ -4058,7 +4058,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Nham Tiểu Ác Ma",
+        "vi":"[Linh Trứng] Tiểu Nham Ma",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5388,7 +5388,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nham Tiểu Ác Ma",
+        "vi":"Tiểu Nham Ma",
         "ar":"",
         "it":"",
         "pl":"",
