--- a/Translation/map.json
+++ b/Translation/map.json
@@ -22,7 +22,7 @@
         "en":"Slime Plain",
         "fr":"Plaine de Slime",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"史莱姆平原",
         "zh-tw":"",
         "kr":"",
         "ru":"",
