--- a/Translation/map.json
+++ b/Translation/map.json
@@ -3,7 +3,7 @@
         "en":"Treefolk Town",
         "fr":"Ville de l'arbre monde",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"古树镇",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -22,7 +22,7 @@
         "en":"Slime Plain",
         "fr":"Plaine de Slime",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"史莱姆平原",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -60,7 +60,7 @@
         "en":"Beast Woods",
         "fr":"Bois de la Bête",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"野兽树林",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -79,7 +79,7 @@
         "en":"Lahm Shore",
         "fr":"Rive de Lahm",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"拉姆海岸",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -136,7 +136,7 @@
         "en":"Imperial City Square",
         "fr":"Place Royale Impériale",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"凯恩王城",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -212,7 +212,7 @@
         "en":"Oracle Lake",
         "fr":"Lac de l'Oracle",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"贤者之湖",
         "zh-tw":"",
         "kr":"",
         "ru":"",
