--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -854,6 +854,63 @@
         "th":"",
         "id":"Serangan biasa menimbulkan {0}% Kerusakan ditingkatkan ke target dari jarak 8 meter dari Anda"
     },
+    "skills.ranger.EVASION_SKILLS.name":{
+        "en":"Evasion Skills",
+        "fr":"Compétences d'Esquive",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "skills.ranger.EVASION_SKILLS.description":{
+        "en":"Provides the Ranger with an Evasion or Skill Evasion Increase for the lowest of the 2 values.",
+        "fr":"Permet à l'Archer d'obtenir plus d'Esquive ou d'Esquive de Compétence pour la valeur la plus basse des deux.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "skills.ranger.EVASION_SKILLS.effect":{
+        "en":"Compare the Evasion adn Skill Evasion values and add a maximum of {0}% to the lowest of the two values. Le lowest value cannot overcome the highest one by this addition.<br><br><i>Ex:<br> - Bonus +30%<br> - Evasion: 20%<br> - Skill Evasion: 35%<br> Evasion is now 35% and not 60%</i>",
+        "fr":"Compare les valeurs d'Esquive et d'Esquive de Compétences et ajoute un maximum de {0}% a la plus faible des deux. La valeur la plus faible ne peut pas dépasser la plus haute par cet ajout.<br><br><i>Ex:<br> - Bonus +30%<br> - Esquive: 20%<br> - Esquive de Compétence: 35%<br>Esquive passe a 35% et non 60%</i>",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "skills.ranger.CHARGED_SHOT.name":{
         "en":"Charged Shot",
         "fr":"Tir Chargé",
