--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -893,7 +893,7 @@
         "id":""
     },
     "skills.ranger.EVASION_SKILLS.effect":{
-        "en":"Compare the Evasion and Skill Evasion values and add a maximum of {0}% to the lowest of the two values. Le lowest value cannot overcome the highest one by this addition.<br><br><i>Ex:<br> - Bonus +30%<br> - Evasion: 20%<br> - Skill Evasion: 35%<br> Evasion is now 35% and not 60%</i>",
+        "en":"Compare the Evasion and Skill Evasion values and add a maximum of {0}% to the lowest of the two values. The lowest value cannot overcome the highest one by this addition.<br><br><i>Ex:<br> - Bonus +30%<br> - Evasion: 20%<br> - Skill Evasion: 35%<br> Evasion is now 35% and not 60%</i>",
         "fr":"Compare les valeurs d'Esquive et d'Esquive de Compétences et ajoute un maximum de {0}% a la plus faible des deux. La valeur la plus faible ne peut pas dépasser la plus haute par cet ajout.<br><br><i>Ex:<br> - Bonus +30%<br> - Esquive: 20%<br> - Esquive de Compétence: 35%<br>Esquive passe a 35% et non 60%</i>",
         "es":"",
         "zh-cn":"",
