--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -866,7 +866,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kỹ Năng Né Tránh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -885,7 +885,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cung cấp cho Cung Thủ thêm Né Tránh và Né Tránh Kỹ Năng cho giá trị thấp nhất trong 2 chỉ số đó.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -904,7 +904,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"So sánh chỉ số Né Tránh và Né Tránh Kỹ Năng và tăng thêm tối đa {0}% vào cho giá trị thấp nhất trong 2 chỉ số đó. Trong trường hợp tăng thêm này thì chỉ số thấp nhất không thể vượt quá chỉ số cao nhất.<br><br><i>Ví dụ:<br> - Cộng thêm +30%<br> - Né Tránh: 20%<br> - Né Tránh Kỹ Năng: 35%<br> Né Tránh bây giờ là 35% và không phải là 60%</i>",
         "ar":"",
         "it":"",
         "pl":"",
