--- a/Translation/item.json
+++ b/Translation/item.json
@@ -8981,6 +8981,63 @@
         "th":"",
         "id":""
     },
+    "item.7300.name":{
+        "en":"Swiftness Flask",
+        "fr":"Flacon de rapidité",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.7301.name":{
+        "en":"Combat Flask",
+        "fr":"Flacon de combat",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.7302.name":{
+        "en":"Fortitude Flask",
+        "fr":"Flacon de robustesse",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.10001.name":{
         "en":"Yellow Celebeam Powder",
         "fr":"Poudre de Celebeam Jaune",
