--- a/Translation/item.json
+++ b/Translation/item.json
@@ -13807,6 +13807,63 @@
         "th":"",
         "id":""
     },
+    "item.7300.description":{
+        "en":"Increase Attack Speed by 15% and crit chance by 5%. Lasts for 30 min.",
+        "fr":"Augmente la vitesse d'attaque de 15 % et les chances de coup critique de 5 %. Dure 30 min.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.7301.description":{
+        "en":"Enhances damage by 5%. Lasts for 30 min.",
+        "fr":"Améliore les dégâts de 5 %. Dure 30 min.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.7302.description":{
+        "en":"Increase Max HP by 2000 and reduces damage by 5%. Lasts for 30 min.",
+        "fr":"Augmente les PV Max de 2000 et réduit les dégâts de 5%. Dure 30 min.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.10001.description":{
         "en":"Crafting material for level 10-19 Gear",
         "fr":"Matériel d'artisanat pour équipement de niveau 10-19",
