--- a/Translation/item.json
+++ b/Translation/item.json
@@ -8993,7 +8993,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bình Nhanh Nhẹn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9012,7 +9012,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bình Chiến Đấu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9031,7 +9031,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bình Cường Hóa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10684,7 +10684,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lõi Dung Nham",
         "ar":"",
         "it":"",
         "pl":"",
@@ -13838,7 +13838,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tăng Tốc Độ Tấn Công lên 15% và Tỉ Lệ Bạo Kích lên 5%. Có hiệu lực trong 30 phút.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -13857,7 +13857,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tăng sát thương lên 5%. Có hiệu lực trong 30 phút.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -13876,7 +13876,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tăng Máu Tối Đa lên 2000 và giảm sát thương đi 5%. Có hiệu lực trong 30 phút.",
         "ar":"",
         "it":"",
         "pl":"",
