--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -418,10 +418,10 @@
         "id":"ENHC DMG"
     },
     "UI.stat.ENHC_DMG.explanation":{
-        "en":"Increases the base damages done by your attack by X%",
-        "fr":"Augmente les dégâts causés par vos attaques de X%",
+        "en":"Increases the base damages done by your attack by {0}%",
+        "fr":"Augmente les dégâts causés par vos attaques de {0}%",
         "es":"",
-        "zh-cn":"增加你攻擊的基礎傷害值 X%",
+        "zh-cn":"增加你攻擊的基礎傷害值 {0}%",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -429,7 +429,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Làm tăng sát thương gốc gây ra từ đòn tấn công lên X%.",
+        "vi":"Làm tăng sát thương gốc gây ra từ đòn tấn công lên {0}%.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -475,10 +475,10 @@
         "id":"DMG RD"
     },
     "UI.stat.DMG_RD.explanation":{
-        "en":"Increases your base defence by X%",
-        "fr":"Augmente votre défense de base de X%",
+        "en":"Increases your base defence by {0}%",
+        "fr":"Augmente votre défense de base de {0}%",
         "es":"",
-        "zh-cn":"增加你的基礎防禦力 X%",
+        "zh-cn":"增加你的基礎防禦力 {0}%",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -486,7 +486,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Làm tăng chỉ số phòng thủ gốc lên X%.",
+        "vi":"Làm tăng chỉ số phòng thủ gốc lên {0}%.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -532,10 +532,10 @@
         "id":"ATK SPD"
     },
     "UI.stat.ATK_SPD.explanation":{
-        "en":"Increases your number of normal attacks per seconds by X%",
-        "fr":"Augmente votre nombre d'attaque par seconde de X%",
+        "en":"Increases your number of normal attacks per seconds by {0}%",
+        "fr":"Augmente votre nombre d'attaque par seconde de {0}%",
         "es":"",
-        "zh-cn":"每秒鐘增加 X% 的普通攻擊次數",
+        "zh-cn":"每秒鐘增加 {0}% 的普通攻擊次數",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -543,7 +543,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Làm tăng số lượng đòn đánh thường mỗi giây lên X%.",
+        "vi":"Làm tăng số lượng đòn đánh thường mỗi giây lên {0}%.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -589,10 +589,10 @@
         "id":"Skill ENHC"
     },
     "UI.stat.SKILL_ENHC.explanation":{
-        "en":"Increases the base damages done by your spells by X%",
-        "fr":"Augmente les dégâts de base de vos compétences de X%",
+        "en":"Increases the base damages done by your spells by {0}%",
+        "fr":"Augmente les dégâts de base de vos compétences de {0}%",
         "es":"",
-        "zh-cn":"增加你技能的基礎傷害值 X%",
+        "zh-cn":"增加你技能的基礎傷害值 {0}%",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -600,7 +600,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Làm tăng sát thương gốc gây ra từ các đòn vận phép lên X%.",
+        "vi":"Làm tăng sát thương gốc gây ra từ các đòn vận phép lên {0}%.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -646,10 +646,10 @@
         "id":"ACC"
     },
     "UI.stat.ACC.explanation":{
-        "en":"Increases the chance of your normal attacks hitting an enemy by X%.",
-        "fr":"Augmente les chances de vos attaques normales de toucher leur cible de X%",
+        "en":"Increases the chance of your normal attacks hitting an enemy by {0}%.",
+        "fr":"Augmente les chances de vos attaques normales de toucher leur cible de {0}%",
         "es":"",
-        "zh-cn":"增加你普通攻擊命中敵人的機率 X%",
+        "zh-cn":"增加你普通攻擊命中敵人的機率 {0}%",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -657,7 +657,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Làm tăng khả năng trúng kẻ thù từ các đòn đánh thường lên X%.",
+        "vi":"Làm tăng khả năng trúng kẻ thù từ các đòn đánh thường lên {0}%.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -703,10 +703,10 @@
         "id":"Skill ACC"
     },
     "UI.stat.SKILL_ACC.explanation":{
-        "en":"Increases the chance of your Skills hitting an enemy by X%.",
-        "fr":"Augmente les chances de vos compétences de toucher leur cible de X%",
+        "en":"Increases the chance of your Skills hitting an enemy by {0}%.",
+        "fr":"Augmente les chances de vos compétences de toucher leur cible de {0}%",
         "es":"",
-        "zh-cn":"增加你技能命中敵人的機率 X%",
+        "zh-cn":"增加你技能命中敵人的機率 {0}%",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -714,7 +714,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Làm tăng khả năng trúng kẻ thù từ các kỹ năng lên X%.",
+        "vi":"Làm tăng khả năng trúng kẻ thù từ các kỹ năng lên {0}%.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -874,10 +874,10 @@
         "id":"CRIT ACC"
     },
     "UI.stat.CRIT_ACC.explanation":{
-        "en":"Increases your critical strikes chances of your normal attacks by X%. Countered by CRIT EVA.",
-        "fr":"Augmente vos chances de coup critique de vos attaque normale de X%. Contré par la Esquive CRIT",
+        "en":"Increases your critical strikes chances of your normal attacks by {0}%. Countered by CRIT EVA.",
+        "fr":"Augmente vos chances de coup critique de vos attaque normale de {0}%. Contré par la Esquive CRIT",
         "es":"",
-        "zh-cn":"增加你普通攻擊的暴擊機率 X%. 暴擊加成會被暴擊閃避所削弱.",
+        "zh-cn":"增加你普通攻擊的暴擊機率 {0}%. 暴擊加成會被暴擊閃避所削弱.",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -885,7 +885,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Làm tăng khả năng bạo kích của đòn đánh thường lên X%. Đối lập với Tránh Bạo.",
+        "vi":"Làm tăng khả năng bạo kích của đòn đánh thường lên {0}%. Đối lập với Tránh Bạo.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -931,10 +931,10 @@
         "id":"Skill CRIT ACC"
     },
     "UI.stat.SKILL_CRIT_ACC.explanation":{
-        "en":"Increases your critical strikes chances of your skills by X%. Countered by Skill CRIT EVA.",
-        "fr":"Augmente vos chances de coup critique de vos compétence de X%. Contré par la Esquive Comp CRIT",
+        "en":"Increases your critical strikes chances of your skills by {0}%. Countered by Skill CRIT EVA.",
+        "fr":"Augmente vos chances de coup critique de vos compétence de {0}%. Contré par la Esquive Comp CRIT",
         "es":"",
-        "zh-cn":"增加你技能的暴擊命中 X%. 技能暴擊命中會被技能暴擊閃避所削弱.",
+        "zh-cn":"增加你技能的暴擊命中 {0}%. 技能暴擊命中會被技能暴擊閃避所削弱.",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -942,7 +942,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Làm tăng khả năng bạo kích của các kỹ năng lên X%. Đối lập với Tránh Kỹ Bạo.",
+        "vi":"Làm tăng khả năng bạo kích của các kỹ năng lên {0}%. Đối lập với Tránh Kỹ Bạo.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -988,8 +988,8 @@
         "id":"CRIT EVA"
     },
     "UI.stat.CRIT_EVA.explanation":{
-        "en":"Reduces your opponent’s critical strikes chances of his normal attacks by X%. Countered by Crit ACC.",
-        "fr":"Reduit les chances de coup critique des attaques normale de votre opposant de X%. Contré par la PRE CRIT",
+        "en":"Reduces your opponent’s critical strikes chances of his normal attacks by {0}%. Countered by Crit ACC.",
+        "fr":"Reduit les chances de coup critique des attaques normale de votre opposant de {0}%. Contré par la PRE CRIT",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -999,7 +999,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Làm giảm khả năng bạo kích từ các đòn đánh thường xuống X%. Đối lập với Bạo Chuẩn.",
+        "vi":"Làm giảm khả năng bạo kích từ các đòn đánh thường xuống {0}%. Đối lập với Bạo Chuẩn.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1045,8 +1045,8 @@
         "id":"Skill CRIT EVA"
     },
     "UI.stat.SKILL_CRIT_EVA.explanation":{
-        "en":"Reduces your opponent’s critical strikes chances of his skills by X%. Countered by Skill Crit ACC.",
-        "fr":"Reduit les chances de coup critique des compétences de votre opposant de X%. Contré par la PRE Comp CRIT",
+        "en":"Reduces your opponent’s critical strikes chances of his skills by {0}%. Countered by Skill Crit ACC.",
+        "fr":"Reduit les chances de coup critique des compétences de votre opposant de {0}%. Contré par la PRE Comp CRIT",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -1056,7 +1056,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Làm giảm khả năng bạo kích từ các kỹ năng xuống X%. Đối lập với Kỹ Bạo Chuẩn.",
+        "vi":"Làm giảm khả năng bạo kích từ các kỹ năng xuống {0}%. Đối lập với Kỹ Bạo Chuẩn.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1102,8 +1102,8 @@
         "id":"CRIT ENHC"
     },
     "UI.stat.CRIT_ENHC.explanation":{
-        "en":"Increases the power of your normal critical attacks by X%. Countered by Crit RD.",
-        "fr":"Augmente la puissance des coups critique de vos attaques normales de X%. Contré par la RD CRIT",
+        "en":"Increases the power of your normal critical attacks by {0}%. Countered by Crit RD.",
+        "fr":"Augmente la puissance des coups critique de vos attaques normales de {0}%. Contré par la RD CRIT",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -1113,7 +1113,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Làm tăng sức mạnh từ các đòn đánh thường lên X%. Đối lập với Giảm Bạo Kích.",
+        "vi":"Làm tăng sức mạnh từ các đòn đánh thường lên {0}%. Đối lập với Giảm Bạo Kích.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1159,8 +1159,8 @@
         "id":"Skill CRIT ENHC"
     },
     "UI.stat.SKILL_CRIT_ENHC.explanation":{
-        "en":"Increases the power of your skill critical damages by X%. Countered by Skill Crit RD.",
-        "fr":"Augmente la puissance des coups critique de vos compétences de X%. Contré par la RD Comp CRIT",
+        "en":"Increases the power of your skill critical damages by {0}%. Countered by Skill Crit RD.",
+        "fr":"Augmente la puissance des coups critique de vos compétences de {0}%. Contré par la RD Comp CRIT",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -1170,7 +1170,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Làm tăng sức mạnh từ các kỹ năng lên X%. Đối lập với Giảm Kỹ Bạo.",
+        "vi":"Làm tăng sức mạnh từ các kỹ năng lên {0}%. Đối lập với Giảm Kỹ Bạo.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1216,8 +1216,8 @@
         "id":"CRIT RD"
     },
     "UI.stat.CRIT_RD.explanation":{
-        "en":"Reduces the critical damage of normal attacks you receive by X%. Countered by Crit ENHC.",
-        "fr":"Réduit les dégâts critiques des attaques normales que vous recevez de X%. Contré par la AM Crit",
+        "en":"Reduces the critical damage of normal attacks you receive by {0}%. Countered by Crit ENHC.",
+        "fr":"Réduit les dégâts critiques des attaques normales que vous recevez de {0}%. Contré par la AM Crit",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -1227,7 +1227,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Làm giảm sát thương bạo kích nhận vào từ các đòn đánh thường xuống X%. Đối lập với Tăng Bạo Kích.",
+        "vi":"Làm giảm sát thương bạo kích nhận vào từ các đòn đánh thường xuống {0}%. Đối lập với Tăng Bạo Kích.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1273,8 +1273,8 @@
         "id":"Skill CRIT RD"
     },
     "UI.stat.SKILL_CRIT_RD.explanation":{
-        "en":"Reduces the critical damage of skills you receive by X%. Countered by Skill Crit ENHC.",
-        "fr":"Réduit les dégâts critiques des compétences que vous recevez de X%. Contré par la AM Comp Crit",
+        "en":"Reduces the critical damage of skills you receive by {0}%. Countered by Skill Crit ENHC.",
+        "fr":"Réduit les dégâts critiques des compétences que vous recevez de {0}%. Contré par la AM Comp Crit",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -1284,7 +1284,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Làm giảm sát thương bạo kích nhận vào từ các kỹ năng xuống X%. Đối lập với Tăng Kỹ Bạo.",
+        "vi":"Làm giảm sát thương bạo kích nhận vào từ các kỹ năng xuống {0}%. Đối lập với Tăng Kỹ Bạo.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1387,8 +1387,8 @@
         "id":"Luck"
     },
     "UI.stat.LUCK.explanation":{
-        "en":"Increases the upper part of your damage range of ALL your attacks by X%. The base damage range is from 100% to 120%.",
-        "fr":"Augmente la partie supérieure de votre plage de dégâts de TOUTES vos attaques de X%. La plage de dégâts de base est de 100% à 120%.",
+        "en":"Increases the upper part of your damage range of ALL your attacks by {0}%. The base damage range is from 100% to 120%.",
+        "fr":"Augmente la partie supérieure de votre plage de dégâts de TOUTES vos attaques de {0}%. La plage de dégâts de base est de 100% à 120%.",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -1398,7 +1398,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Làm tăng phần trên của phạm vi sát thương từ Tất Cả các các đòn tấn công lên X%. Phạm vi sát thương gốc là từ 100% đến 120%.",
+        "vi":"Làm tăng phần trên của phạm vi sát thương từ Tất Cả các các đòn tấn công lên {0}%. Phạm vi sát thương gốc là từ 100% đến 120%.",
         "ar":"",
         "it":"",
         "pl":"",
