--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -5756,6 +5756,63 @@
         "th":"",
         "id":""
     },
+    "UI.windows.mail.button.take-all":{
+        "en":"Take all",
+        "fr":"Tout prendre",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.mail.button.select-all":{
+        "en":"Select all",
+        "fr":"Tout selectionner",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.mail.button.unselect-all":{
+        "en":"Unselect all",
+        "fr":"Tout déselectionner",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.worldmap.title":{
         "en":"World Map",
         "fr":"Carte du Monde",
