--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -6414,7 +6414,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhận tất cả",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6433,7 +6433,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chọn tất cả",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6452,7 +6452,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bỏ chọn tất cả",
         "ar":"",
         "it":"",
         "pl":"",
