--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -10651,7 +10651,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Tăng Tốc Độ Tấn Công của lên {0}% trong 5 Giây khi tấn công mục tiêu với đòn đánh thường. Có thể cộng dồn 4 lần",
         "ar": "",
         "it": "",
         "pl": "",
