--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -536,7 +536,7 @@
         "fr":"Créer un bouclier magique qui absorbe les dégâts.",
         "es":"",
         "zh-cn":"制造一面能够吸收伤害的魔力护盾.",
-        "zh-tw":"製造一面能夠吸收傷害的魔力護盾."",
+        "zh-tw":"製造一面能夠吸收傷害的魔力護盾.",
         "kr":"",
         "ru":"Создаёт магический щит, который впитывает получаемый урон.",
         "tr":"",
@@ -593,7 +593,7 @@
         "fr":"Attaque la cible, l’empêchant d'utiliser des compétences.",
         "es":"",
         "zh-cn":"攻击目标并使其无法使用技能.",
-        "zh-tw":"攻擊目標並使其無法使用技能."",
+        "zh-tw":"攻擊目標並使其無法使用技能.",
         "kr":"",
         "ru":"Проклинает цель, запрещает ей использовать навыки.",
         "tr":"",
